Added classes to help with migration of observations that were captured through different forms

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,2 +1,15 @@
 cchedataimport.title=CCHE Data Import
-cchedataimport.addobs=Add Obs To Encounter
+cchedataimport.setObsGroup=Set Obs Group
+cchedataimport.addAnswersToCededConcept = Add Answers To Coded Concept
+
+cchedataimport.saveAllPatients = Save All Patients
+
+cchedataimport.CleftLipPalateHistoryObs = Create Cleft Lip/Palate - History Obs
+cchedataimport.CleftLipPalateOperativeReportObs = Create Cleft Lip/Palate - Operative Report Obs
+cchedataimport.CleftLipPalatePhysicalExamObs = Create Cleft Lip/Palate - Physical Exam Obs
+cchedataimport.CleftLipPalatePlanObs = Cleft Lip/Palate - Plan  Obs
+
+cchedataimport.createOrthopaedicFollowupObs = Create Orthopaedic Followup Obs
+cchedataimport.createOrthopaedicHandPObs = Create Orthopaedic H&P Obs
+cchedataimport.createOrthopaedicOperativeReportObs = Create Orthopaedic Operative Report Obs
+cchedataimport.createOrthopaedicPlanObs = Create Orthopaedic Plan Obs
