Added utility methods to import skipped Orthopedic Followup visits

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -23,4 +23,8 @@ cchedataimport.setOrthopaedicFollowup= Set Orthopaedic Followup Form
 cchedataimport.setOrthopaedicHP= Set Orthopaedic Histroy and Plan Form
 cchedataimport.setOrthopaedicOperativeReport= Set Orthopaedic Operative Report Form
 cchedataimport.setOrthopaedicPlan= Set Orthopaedic Plan Form
+
+cchedataimport.importSkippedOrthopaedicFollowupObs= Import Skipped Orthopaedic Followup Obs
+cchedataimport.setSkippedOrthopaedicFollowupObs= Set Skipped Orthopaedic Followup Obs
+		
 	
