Added methods to import skipped visits during the initial import

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -35,5 +35,8 @@ cchedataimport.setOrthopedicAuthorComment= Set Orthopedic Author Comment
 cchedataimport.importSkippedOrthopaedicOperativeReportObs= Import Skipped Orthopaedic Operative Report Obs
 cchedataimport.setSkippedOrthopaedicOperativeReportObs= Set Skipped Orthopaedic Operative Report Obs
 
+cchedataimport.importSkippedOrthopaedicHPObs= Import Skipped Orthopaedic HP Obs
+cchedataimport.setSkippedOrthopaedicHPObs= Set Skipped Orthopaedic HP Obs
+
 		
 	
